changed the picture source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing=20>
     <tr>
       <td>
-        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHJfy2RheVpew/profile-displayphoto-shrink_200_200/0/1628560532178?e=1634169600&v=beta&t=-QHbpLkW_Xa5CCuvlmQb9g542Fd7X8VpmslxiLQmEtQ" alt="Pooya's Picture">
+        <img src="p.jpg" alt="Pooya's Picture">
       </td>
       <td>
         <h1>Pooya Rowghanian</h1>
