updated index with the small photo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing=20>
     <tr>
       <td>
-        <img src="p.jpg" alt="Pooya's Picture">
+        <img src="pr.jpg" alt="Pooya's Picture">
       </td>
       <td>
         <h1>Pooya Rowghanian</h1>
